src/main/java/com/example/DiplomaSite/error/TeacherValidationException.java
package com.example.DiplomaSite.error;

public class TeacherValidationException extends RuntimeException{
    public TeacherValidationException(String message) {
        super(message);
    }
}
